--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News App | DSR</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets\style.css">
 </head>
 <body>
     
@@ -48,6 +48,6 @@
             </div>
         </template>
     <script src="https://kit.fontawesome.com/fff0836f27.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="assets\script.js"></script>
 </body>
 </html>
