--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <nav>
         <div class="main-nav container flex">
             <a href="#" onclick="reload()" class="logo">
-                <i class="fa-solid fa-newspaper"></i>
+                <img src="assets\logo.png" alt="">
             </a>
             <div class="nav-links">
                 <ul class="flex">
-                    <li class="hover-link nav-item" id="ipl" onclick="onNavItemClick('sports')">Sports</li>
+                    <li class="hover-link nav-item" id="sports" onclick="onNavItemClick('sports')">Sports</li>
                     <li class="hover-link nav-item" id="politics" onclick="onNavItemClick('politics')">Politics</li>
                     <li class="hover-link nav-item" id="finance" onclick="onNavItemClick('finance')">Finance</li>
                 </ul>
