--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
             <span class="dot"></span>
             <span class="dot"></span>
             <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
           </div>
 
           </div>
